--- a/LESS/global.less
+++ b/LESS/global.less
@@ -19,20 +19,12 @@ h1 {
 	font-size: 2.4rem;
 }
 
-h2,tr {
+h2 {
 	font-size: 2rem;
 }
 
 p,a,td {
 	font-size: 1.6rem;
-}
-
-i {
-	font-style: italic;
-}
-
-b {
-	font-weight: bold;
 }
 
 .container {
