--- a/Pages/Novena/novena.less
+++ b/Pages/Novena/novena.less
@@ -3,6 +3,7 @@
     h1 {
         background-color: rgba(115, 30, 194, 0.4);
         padding: 5px 0;
+        font-weight:bold;
         
         @media @tablet {
             text-align:center;
@@ -65,19 +66,29 @@
         }
     }
 
+    .verse {
+        font-weight:bold;
+    }
+
+    .resp {
+        font-style:italic;
+    }
+
     .prayer-text {
         max-width: 900px;
+        margin-top: 2rem;
 
         @media @tablet {
-            margin: 0 8%;
+            margin: 2rem 8% 0;
         }
 
         @media @phone {
-            margin: 0 5%;
+            margin: 2rem 5% 0;
         }
     }
 
     .ofhm {
+        font-style:italic;
 
         @media @tablet {
             text-align: center;
